tests/incremental_haste_name_reducers_duplicate/incremental_haste_name_reducers_duplicate.exp

Initial status:
No errors!

Copy A.js to B.js:
Error ----------------------------------------------------------------- B.js:1:1

Duplicate module provider for `A`. Change either this module provider or the
current module provider.

Error: B.js:1
  1: /* @flow */
     ^ Duplicate module provider for `A`. Change either this module provider or the current module provider [1].
  References:
    1: /* @flow */
       ^ [1]: current module provider. See: A.js:1


Found 1 error

Move B.js to A.js:
No errors!

Done!
